# assignment

./: README.md  collection.json  environment.json  package-lock.json  package.json  pyproject.toml
app/: auth.py  cli.py  models.py
app/routers/: __init__.py  auth.py  mypokemon.py  pokemon.py
