[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "info-2602-fastapi-assignment-1-starter"
version = "0.0.1"
description = "Assignment 1 starter info 2602"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Kwasi Edwards", email = "kwasiedwards@gmail.com" }
]
dependencies = [
    "fastapi[standard]",
    "httpx",
    "pwdlib[argon2]",
    "pytest-asyncio",
    "pytest",
    "ruff",
    "sqlmodel",
    "typer",
    "uvicorn[standard]",
    "PyJWT",
]

[project.optional-dependencies]
dev = [

]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["app"]